syntax="proto3";

option go_package="github.com/wutipong/mangaweb3-backend/service";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

message Meta {
  int64 id = 1;
  string name = 2;
  google.protobuf.Timestamp create_time = 3;
  bool favorite = 4;
  google.protobuf.BytesValue thumbnail = 5;
  bool read = 6;
  bool active = 7;
}

message Tag {
  int64 id = 1;
  string name = 2;
  bool favorite = 3;
  bool hidden = 4;
  google.protobuf.BytesValue thumbnail = 5;
}


enum SORT_BY {
  SORT_BY_CREATE_TIME = 0;
  SORT_BY_NAME = 1;
}

enum ORDER {
  ORDER_ASCENDING = 0;
  ORDER_DESCENDING = 1;
}

message ListRequest {
  string Tag = 1;
  bool FavoriteOnly = 2;
  int32 Page = 3;
  int32 ItemPerPage = 4;
  string Search = 5;
  SORT_BY Sort = 6;
  ORDER Order = 7;
}

message ListResponse {
  bool TagFavorite = 1;
  int32 TotalPage = 2;
  repeated Meta Items = 3;
}

message GetRequest {
  int32 Id = 1;
}

message GetResponse {
  Meta Item = 1;
  int32 PageCount = 2;
	repeated Tag Tags = 3;
}

service MetaService {
  rpc List(ListRequest) returns (ListResponse) {}
  rpc Get(GetRequest) returns (GetResponse){}
}